--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,23 @@
+= Malboxes
+
+Vagrant box builder for malware analysis
+
+https://github.com/gosecure/malboxes
+
+== Requirements
+
+* Python 3
+* jinja2
+
+== Usage
+
+Copy `config-example.json` to `config.json` and run:
+
+    ./malboxes.py
+
+// FIXME
+
+== Old README
 Intro:
 
 Packer templates for creating a basic malware analysis lab, as per the
