malboxes goes further into Vagrant land

--- a/TODO.adoc
+++ b/TODO.adoc
@@ -47,3 +47,18 @@ https://github.com/joefitzgerald/packer-windows/blob/master/answer_files/7/Autou
 == Cleanup
 
 * Consolidate duplicated info (arch specifics) in installconfig/windows10/
+
+== Vagrant things to try or document
+
+* config.vm.box_url
+
+=== Other things
+
+  # Create a private network, which allows host-only access to the machine
+  # using a specific IP.
+  # config.vm.network "private_network", ip: "192.168.33.10"
+
+  # Create a public network, which generally matched to bridged network.
+  # Bridged networks make the machine appear as another physical device on
+  # your network.
+  # config.vm.network "public_network"
