--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,16 @@
 :toclevels: 2
 :twob: https://twitter.com/obilodeau
 :twhg: https://twitter.com/hugospns
+// github stuff
+ifdef::env-github[:status:]
+
+// Travis Build Status
+ifdef::status[]
+.*Project health*
+image:https://img.shields.io/travis/gosecure/malboxes/master.svg[Build
+Status (Travis CI), link=https://travis-ci.org/gosecure/malboxes]
+endif::[]
+
 
 Vagrant box builder and config generator for malware analysis
 
