pip package: First conversion to pkg_resource to see if it's ok with git

--- a/README.adoc
+++ b/README.adoc
@@ -27,7 +27,7 @@ https://github.com/gosecure/malboxes
 
 == Installation
 
-    pip install git+https://github.com/GoSecure/malboxes.git@pip-packaging#egg=malboxes
+    sudo pip install git+https://github.com/GoSecure/malboxes.git@pip-packaging#egg=malboxes
 
 == Usage
 
