--- a/TODO.adoc
+++ b/TODO.adoc
@@ -2,14 +2,7 @@
 
 == pip packaging
 
-* Needs to port code to use pkg resource API
-
-See:
-* https://setuptools.readthedocs.io/en/latest/setuptools.html#accessing-data-files-at-runtime
-* http://stackoverflow.com/a/26533921
-
-* Push caches into .local/share/ (and Windows equivalent) - avoids permissions issues
-* Allow config overrides in .config/malboxes (and Windows equivalent)
+* where should the built boxes go?
 
 == Misc
 
