Compose JSON packer templates out of smaller files and use a JS config
* config.js is now a javascript file that gets minified into a json file by malboxes
* Comments are thus allowed and used to enable or disable features (IDA debuggers and Tools uploads)
* Packer template file is built based on features enabled or disabled
* Removed duplication in packer profiles

--- a/README.adoc
+++ b/README.adoc
@@ -101,7 +101,7 @@ For example:
     malboxes build win10_64_analyst
 
 If you want to customize your configuration, look at the following location
-for a `config.json` file:
+for a `config.js` file:
 
 * Linux/Unix: `~/.config/malboxes/`
 * Mac OS X: `~/Library/Application Support/malboxes/`
