--- a/README.adoc
+++ b/README.adoc
@@ -24,6 +24,7 @@ https://github.com/gosecure/malboxes
 * Python 3.3+
 * appdirs
 * jinja2
+* jsmin
 * packer: https://www.packer.io/intro/getting-started/setup.html
 * vagrant: https://www.vagrantup.com/downloads.html
 
