doc: added links to VM detection in TODO.adoc (related to #23)

--- a/TODO.adoc
+++ b/TODO.adoc
@@ -48,7 +48,13 @@ https://github.com/joefitzgerald/packer-windows/blob/master/answer_files/7/Autou
 
 == Improvements to VM detection
 
+Also filed https://github.com/GoSecure/malboxes/issues/23[in issue #23].
+
 * https://github.com/hfiref0x/VBoxHardenedLoader
+* https://github.com/a0rtega/pafish, vm detection tool (pass it)
+* http://www.securityweek.com/dyre-banking-trojan-counts-processor-cores-detect-sandboxes
+* http://unprotect.tdgt.org/index.php/Cheat_Sheets
+* http://vmcloak.readthedocs.io/en/latest/hwconfig.html#hwconfig-create
 
 == Related projects that might be useful
 
