--- a/README.adoc
+++ b/README.adoc
@@ -40,22 +40,10 @@ https://github.com/gosecure/malboxes
 
 === Windows
 
-==== Manually
-
-* Install https://www.virtualbox.org/wiki/Downloads[VirtualBox],
-  https://www.vagrantup.com/downloads.html[Vagrant] and
-  https://git-scm.com/downloads[git]
-* https://www.packer.io/downloads.html[Install Packer], drop the packer binary
-  in a folder in your user's PATH like `C:\Windows\System32\`
-* https://www.python.org/downloads/[Install Python 3] (make sure to add
-  Python to your environment variables)
-* Open a console (Windows-Key + cmd)
-+
-    pip3 install git+https://github.com/GoSecure/malboxes.git#egg=malboxes
-
 ==== Using Chocolatey
 
-Assuming you have https://chocolatey.org/[Chocolatey] installed:
+The following steps assume that you have https://chocolatey.org/[Chocolatey]
+installed. Otherwise, follow the <<Manually,manual installation procedure>>.
 
 * Install dependencies:
 +
@@ -66,6 +54,19 @@ Assuming you have https://chocolatey.org/[Chocolatey] installed:
     refreshenv
 +
 * Install malboxes:
++
+    pip3 install git+https://github.com/GoSecure/malboxes.git#egg=malboxes
+
+==== Manually
+
+* Install https://www.virtualbox.org/wiki/Downloads[VirtualBox],
+  https://www.vagrantup.com/downloads.html[Vagrant] and
+  https://git-scm.com/downloads[git]
+* https://www.packer.io/downloads.html[Install Packer], drop the packer binary
+  in a folder in your user's PATH like `C:\Windows\System32\`
+* https://www.python.org/downloads/[Install Python 3] (make sure to add
+  Python to your environment variables)
+* Open a console (Windows-Key + cmd)
 +
     pip3 install git+https://github.com/GoSecure/malboxes.git#egg=malboxes
 
