--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -35,8 +35,8 @@ Bug fixes::
 Released by @obilodeau on 2017-02-16.
 
 // {uri-repo}/issues?q=milestone%3A1.0.0[issues resolved] |
-{uri-repo}/releases/tag/v0.2.0[git tag] |
-{uri-repo}/compare/v0.1.0...v0.2.0[full diff]
+{uri-repo}/releases/tag/0.2.0[git tag] |
+{uri-repo}/compare/0.1.0...0.2.0[full diff]
 
 === Credits
 
